# scholar

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  DISCLOSURE.md  README.md  RELEASING.md  STATUS.md  codecov.yml
.claude-plugin/: marketplace.json  plugin.json
.claude/skills/create-issue/: SKILL.md  STYLE.md
.claude/skills/create-pr/: SKILL.md  STYLE.md
.github/actions/publish-package/: action.yml
.github/actions/report-published/: action.yml
.github/workflows/: bump-version.yml  ci.yml  docs-publish.yml  live-validation.yml  publish.yml
assets/: visual-identity.md
decisions/: 0001-separate-plugin-repo.md  0002-scientific-scope-only.md  0003-agency-principle.md  0004-understanding-principle-and-defend.md  0004-understanding-principle-and-grill.md  0005-three-level-mirror.md  0006-two-skills-per-level.md  0007-literature-one-skill-two-modes.md  0008-literature-bib-plus-triage.md  0009-dataset-thin-manifest.md  0010-storage-tiers.md  0011-rclone-mirror-sha256.md  0012-shared-substrate.md  0013-experiment-backend-contract.md  0014-progress-cross-cutting.md  0015-defend-cross-cutting.md  0015-grill-cross-cutting.md  0016-mentor-personas.md  0017-research-init-one-skill.md  0018-git-native-source-of-truth.md  0019-public-plugin-visibility.md  0020-bib-format-csl-json.md  0021-thesis-gate-per-gap-confirmation.md  0022-license-apache-2.0.md  0023-engineering-delegation-contract.md  0024-tooling-package-and-bootstrap.md  0025-disclosure-and-citation-growth.md  0026-independent-versioning-compat-pin.md  0027-release-driven-oidc-publish.md  0028-100-percent-coverage-gate.md  0029-api-key-handling.md  0030-docs-site-mintlify.md  0031-config-driven-cache-dir.md  0031-keys-store-outside-repo-by-default.md  README.md
docs/: USER-GUIDE.md
docs/design/: 00-meta-spec.md  01-lifecycle.md  02-literature.md  03-dataset.md  04-substrate-and-contract.md  visual-identity.md
docs/design/proposals/: cross-repo-thesis-aggregation.md  dataset-manifest-tooling.md  dataset-retrieval-mirror-tooling.md  defend-record-helper.md  docs-site.md  exploration-backlog-helper.md  literature-citation-graph-client.md  tooling-package.md
honest-scholar/: LICENSE  README.md  pyproject.toml
honest-scholar/honest_scholar/: __init__.py  cli.py
honest-scholar/honest_scholar/core/: __init__.py  config.py  http.py  keys.py
honest-scholar/honest_scholar/dataset/: __init__.py  manifest.py  retrieval.py
honest-scholar/honest_scholar/defend/: __init__.py  record.py
honest-scholar/honest_scholar/exploration/: __init__.py  backlog.py
honest-scholar/honest_scholar/literature/: __init__.py  graph.py
honest-scholar/tests/: conftest.py  test_backlog.py  test_cache_config.py  test_cli.py  test_cli_commands.py  test_config.py  test_keys.py  test_literature.py  test_live_literature.py  test_live_retrieval.py  test_manifest.py  test_record.py  test_retrieval.py
resources/: commit-attribution.md  ensure-tooling.md
resources/contracts/: engineering.md  experiment-backend.md
resources/references/: agency-principle.md  citation-scouting.md  dataset-management-standards.md  dataset-tooling-mirror.md  mentor-personas.md  related-works-synthesis.md  thesis-and-progress-tracking.md  understanding-and-defense.md  understanding-and-grilling.md
resources/rigor/: rigor-kit.md
resources/substrate/: asset-registry.md
resources/templates/: README.md
resources/templates/hypothesis/: design-plan-README.md  findings.md  hypothesis.md  strategy.md
resources/templates/paper/: decision.md  ledger.md  pitch.md  positioning.md
resources/templates/thesis/: aims.md  kappa.md  milestones.yml
skills/dataset/: SKILL.md
skills/defend/: SKILL.md
skills/grill/: SKILL.md
skills/hypothesis-exploration/: SKILL.md
skills/hypothesis-testing/: SKILL.md
skills/literature/: SKILL.md
skills/paper-exploration/: SKILL.md
skills/paper-synthesis/: SKILL.md
skills/progress/: SKILL.md
skills/research-init/: SKILL.md
skills/thesis/: SKILL.md
tools/: build_docs_site.py  bump_version.py  lint.sh  typecheck.sh  validate-plugin.sh
