[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "honest-scholar"
version = "0.0.0b0"
description = "honest-scholar — a CLI for honest, defensible AI-assisted research (tooling for the honest-scholar plugin)"
authors = [{ name = "Davor Runje", email = "davor@synthpop.ai" }]
maintainers = [{ name = "Davor Runje", email = "davor@synthpop.ai" }]
requires-python = ">=3.11,<3.15"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
keywords = ["research", "science", "cli", "literature", "dataset", "claude-code"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]
dependencies = [
    "typer>=0.12",
    "requests>=2.31",
    "pyyaml>=6.0",
    "pooch>=1.8",
]

[project.urls]
Homepage   = "https://github.com/davorrunje/honest-scholar"
Repository = "https://github.com/davorrunje/honest-scholar"
Issues     = "https://github.com/davorrunje/honest-scholar/issues"

[project.scripts]
honest-scholar = "honest_scholar.cli:app"
hsch = "honest_scholar.cli:app"

[project.optional-dependencies]
# Thin MCP wrapper over the same core modules — added later (ADR-0024, CLI-first).
mcp = []

[dependency-groups]
dev = [
    "pytest==9.1.1",
    "pytest-cov==7.1.0",
    "mypy==2.2.0",
]
lint = [
    "pre-commit==4.6.0",
    "ruff==0.15.21",
    "mypy==2.2.0",
    "types-requests==2.32.4.20250913",
    "types-PyYAML==6.0.12.20260518",
    "codespell==2.4.2",
    "bandit==1.9.4",
    "detect-secrets==1.5.0",
]

[tool.uv]
# `uv sync` installs these groups by default (locally and in CI), so ruff/mypy/
# pytest are present without extra flags. Mirrors mononet.
default-groups = ["dev", "lint"]

[tool.hatch.build.targets.sdist]
include = ["honest_scholar"]

[tool.hatch.build.targets.wheel]
include = ["honest_scholar"]

[tool.mypy]
files = ["honest_scholar", "tests"]
strict = true
strict_bytes = true
local_partial_types = true
python_version = "3.11"
ignore_missing_imports = true
install_types = true
non_interactive = true
# from https://blog.wolt.com/engineering/2021/09/30/professional-grade-mypy-configuration/
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
show_error_codes = true
warn_unused_ignores = false

disallow_incomplete_defs = true
disallow_untyped_decorators = true
disallow_any_unimported = false

follow_imports = "silent"
warn_redundant_casts = true
disallow_any_generics = true
no_implicit_reexport = true

[tool.pytest.ini_options]
addopts = '--cov=honest_scholar --cov-branch --cov-report=term-missing --cov-report=xml'
testpaths = ["tests"]
markers = [
    "live: opt-in integration test against real services (network / rclone); skipped unless HONEST_SCHOLAR_LIVE=1",
]

[tool.coverage.report]
fail_under = 100
show_missing = true
exclude_also = [
    "if TYPE_CHECKING:",
    "\\.\\.\\.",
    "if __name__ == .__main__.:",
    "pragma: no cover",
]

[tool.ruff]
fix = true
line-length = 88
target-version = "py311"
include = [
    "honest_scholar/**/*.py",
    "tests/**/*.py",
    "pyproject.toml",
]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors     https://docs.astral.sh/ruff/rules/#error-e
    "W",     # pycodestyle warnings   https://docs.astral.sh/ruff/rules/#warning-w
    "C90",   # mccabe                 https://docs.astral.sh/ruff/rules/#mccabe-c90
    "N",     # pep8-naming            https://docs.astral.sh/ruff/rules/#pep8-naming-n
    "D",     # pydocstyle             https://docs.astral.sh/ruff/rules/#pydocstyle-d
    "I",     # isort                  https://docs.astral.sh/ruff/rules/#isort-i
    "F",     # pyflakes               https://docs.astral.sh/ruff/rules/#pyflakes-f
    "ASYNC", # flake8-async           https://docs.astral.sh/ruff/rules/#flake8-async-async
    "C4",    # flake8-comprehensions  https://docs.astral.sh/ruff/rules/#flake8-comprehensions-c4
    "B",     # flake8-bugbear         https://docs.astral.sh/ruff/rules/#flake8-bugbear-b
    "Q",     # flake8-quotes          https://docs.astral.sh/ruff/rules/#flake8-quotes-q
    "T20",   # flake8-print           https://docs.astral.sh/ruff/rules/#flake8-print-t20
    "SIM",   # flake8-simplify        https://docs.astral.sh/ruff/rules/#flake8-simplify-sim
    "PT",    # flake8-pytest-style    https://docs.astral.sh/ruff/rules/#flake8-pytest-style-pt
    "PTH",   # flake8-use-pathlib     https://docs.astral.sh/ruff/rules/#flake8-use-pathlib-pth
    "TCH",   # flake8-type-checking   https://docs.astral.sh/ruff/rules/#flake8-type-checking-tch
    "RUF",   # Ruff-specific rules    https://docs.astral.sh/ruff/rules/#ruff-specific-rules-ruf
    "PERF",  # Perflint               https://docs.astral.sh/ruff/rules/#perflint-perf
    "UP",    # pyupgrade              https://docs.astral.sh/ruff/rules/#pyupgrade-up
]

ignore = [
    "E501",     # line too long, handled by formatter later
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "D100",     # missing docstring in public module
    "D101",
    "D102",
    "D103",
    "D104",     # missing docstring in public package
    "D105",     # missing docstring in magic methods
    "D106",     # missing docstring in public nested class
    "D107",     # missing docstring in __init__
    "T20",      # flake8-print
    "PLR2004",  # magic-value-comparison
    "S101",     # use assert
    "N806",     # uppercase variable names
]

[tool.ruff.lint.isort]
case-sensitive = true

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint.pydocstyle]
convention = "pep257"
